# bigcrypt

./: .gitignore  README.md  crypted.py  pyproject.toml  requirements.txt  test.sh  tox.ini
.github/workflows/: build.yml
