[tool.poetry]
name = "crypted"
version = "0.1.0"
description = "Encrypt large files using libsodium"
authors = ["Javier Santacruz <javier.santacruz.lc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pynacl = "^1.3.0"
fallocate = "^1.6.4"
cached_property = "^1.5.1"

[tool.poetry.dev-dependencies]
tox = "^3.15.1"

[tool.poetry.scripts]
bigcrypt = 'crypted:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
